--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,5 @@
 ---
+import ProfessionalExperience from '@components/ProfessionalExperience.astro';
 import SectionContainer from '@components/SectionContainer.astro';
 import Layout from '@layouts/Layout.astro';
 
@@ -10,6 +11,7 @@ import Layout from '@layouts/Layout.astro';
 			<h1 class="text-6xl font-extrabold text-center">Welcome to Astro.</h1>
 			<p class="text-center">You're looking at a barebones Astro starter.</p>
 		</SectionContainer>
+		<ProfessionalExperience />
 	</main>
 </Layout>
 
