--- a/src/components/ProfessionalExperience.astro
+++ b/src/components/ProfessionalExperience.astro
@@ -1,5 +1,5 @@
 ---
-import SectionContainer from "@components/SectionContainer.astro";
+import SectionContainer from '@components/SectionContainer.astro';
 
 const experience = [
   {
