--- a/src/components/ProfessionalExperience.astro
+++ b/src/components/ProfessionalExperience.astro
@@ -1,41 +1,9 @@
 ---
 import SectionContainer from '@components/SectionContainer.astro';
-
-const experience = [
-  {
-    title: "Software Engineer at Oracle",
-    date: "March 2023 - Present",
-    description:
-      "Front end Developer in Logging Analytics service at Oracle Cloud Infrastructure, utilizing Oracle JET, JavaScript, and TypeScript. Responsible for developing and maintaining front end components, ensuring seamless integration with back-end services. Proficient in creating intuitive user interfaces, conducting thorough testing, and incorporating user feedback. Achievements include contributions to the development of new features for enhanced logs analysis capabilities.",
-  },
-  {
-    title: "Software Development Intern at GE Aerospace",
-    date: "June 2021",
-    description:
-      "Full stack developer with practical knowledge on coding, debugging and testing using technologies such as TypeScript, Vue.js, PostgreSQL, Docker, Jenkins, SonarQube, Java, JUnit and Spring Framework. Also working in an agile software development team implementing software best practices and methodologies like DevOps and CI/CD.",
-  },
-];
+import Timeline from '@components/Timeline.astro';
 ---
 
 <SectionContainer class="py-44 pb-32">
   <h2 class="text-3xl font-bold text-center mb-10">Professional Experience</h2>
-
-  <ol class="relative border-s border-gray-200 dark:border-gray-700">
-    {
-      experience.map((item, index) => (
-        <li class="mb-10 ms-4">
-          <div class="absolute w-3 h-3 bg-gray-200 rounded-full mt-1.5 -start-1.5 border border-white dark:border-gray-900 dark:bg-gray-700" />
-          <time class="mb-1 text-sm font-normal leading-none text-gray-400 dark:text-gray-500">
-            {item.date}
-          </time>
-          <h3 class="text-lg font-semibold text-gray-900 dark:text-white">
-            {item.title}
-          </h3>
-          <p class="text-base font-normal text-gray-500 dark:text-gray-400">
-            {item.description}
-          </p>
-        </li>
-      ))
-    }
-  </ol>
+  <Timeline />
 </SectionContainer>
