--- a/src/icons/LogoIcon.astro
+++ b/src/icons/LogoIcon.astro
@@ -1,11 +1,18 @@
-<?xml version="1.0" standalone="no"?>
-<!DOCTYPE svg PUBLIC "-//W3C//DTD SVG 20010904//EN" "http://www.w3.org/TR/2001/REC-SVG-20010904/DTD/svg10.dtd">
-<svg version="1.0" xmlns="http://www.w3.org/2000/svg"
-  width="640.000000pt" height="640.000000pt" viewBox="0 0 640.000000 640.000000"
-  preserveAspectRatio="xMidYMid meet">
-  <rect width="100%" height="100%" fill="white" />
-  <g transform="translate(0.000000,640.000000) scale(0.100000,-0.100000)"
-    fill="#000000" stroke="none">
+<!--?xml version="1.0" standalone="no"?--><!doctype html>
+<svg
+  version="1.0"
+  xmlns="http://www.w3.org/2000/svg"
+  width="640.000000pt"
+  height="640.000000pt"
+  viewBox="0 0 640.000000 640.000000"
+  preserveAspectRatio="xMidYMid meet"
+>
+  <rect width="100%" height="100%" fill="white"></rect>
+  <g
+    transform="translate(0.000000,640.000000) scale(0.100000,-0.100000)"
+    fill="#000000"
+    stroke="none"
+  >
     <path
       d="M3110 6374 c-156 -25 -435 -93 -590 -144 -112 -37 -165 -49 -231 -53
 -73 -4 -98 -10 -172 -45 -47 -22 -118 -62 -159 -88 -100 -66 -235 -130 -316
@@ -97,27 +104,33 @@ m1029 -182 c-58 -54 -146 -118 -267 -194 -24 -14 -43 -24 -43 -22 0 17 78 130
 49 47 20z m-259 -79 c-2 -1 -21 -5 -43 -8 l-40 -6 35 13 c29 11 61 12 48 1z
 m-4066 -166 c4 -12 1 -38 -21 -234 -6 -49 -14 -155 -17 -235 -4 -80 -10 -149
 -14 -153 -17 -19 -49 16 -107 123 -48 86 -61 271 -26 352 36 79 172 187 185
-147z" />
+147z"
+    ></path>
     <path
       d="M3916 3519 c-112 -27 -159 -89 -127 -171 38 -98 272 -214 418 -206
-l58 3 24 50 c34 71 39 135 13 177 -69 112 -247 179 -386 147z" />
+l58 3 24 50 c34 71 39 135 13 177 -69 112 -247 179 -386 147z"
+    ></path>
     <path
       d="M2185 3422 c-53 -25 -143 -117 -177 -181 -61 -113 -11 -211 108 -211
 82 0 189 81 253 193 42 74 43 115 4 171 -28 39 -31 41 -88 44 -42 1 -72 -4
--100 -16z" />
+-100 -16z"
+    ></path>
     <path
       d="M5182 3182 c-23 -9 -65 -39 -92 -66 -39 -38 -50 -56 -50 -81 0 -34
 34 -75 63 -75 18 0 87 38 87 49 0 13 61 43 76 37 17 -6 19 -58 3 -87 -6 -11
 -41 -40 -79 -64 -72 -47 -88 -73 -70 -119 23 -61 101 -53 194 21 68 53 112
-120 120 185 21 157 -106 258 -252 200z" />
+120 120 185 21 157 -106 258 -252 200z"
+    ></path>
     <path
       d="M1920 2636 l0 -54 83 -13 c45 -7 111 -13 146 -13 l64 -1 12 35 c30
 85 33 78 -37 73 -35 -3 -106 2 -160 11 -54 9 -100 16 -103 16 -3 0 -5 -24 -5
--54z" />
+-54z"
+    ></path>
     <path
       d="M1531 1945 c-22 -24 -41 -50 -41 -58 0 -19 147 -159 212 -200 87 -57
 83 -58 100 27 l15 75 -51 35 c-29 20 -81 65 -116 101 -36 36 -68 65 -71 65 -4
-0 -25 -20 -48 -45z" />
+0 -25 -20 -48 -45z"
+    ></path>
     <path
       d="M1900 1650 c-6 -38 -9 -73 -7 -77 3 -4 31 -21 63 -38 l57 -30 -164
 -3 c-90 -2 -191 2 -224 7 -33 6 -99 14 -146 17 -82 6 -87 6 -98 -14 -11 -21
@@ -149,7 +162,8 @@ l-9 43 52 -6 c28 -4 202 -10 387 -15z m-1091 -5 c0 -11 -19 -15 -25 -6 -3 5 1
 78 44 164 80 246 172 617 172 689 0 58 8 63 79 45z m-1525 -190 c25 -49 46
 -92 46 -95 0 -13 -36 -4 -75 19 -43 25 -67 62 -80 122 -5 25 -3 32 12 36 45
 12 51 7 97 -82z m182 -564 c-6 -40 7 -99 50 -227 9 -25 -45 31 -128 134 -43
-54 -76 101 -73 105 4 3 39 11 78 17 40 6 74 12 76 13 2 0 0 -19 -3 -42z" />
+54 -76 101 -73 105 4 3 39 11 78 17 40 6 74 12 76 13 2 0 0 -19 -3 -42z"
+    ></path>
     <path
       d="M5073 900 c-41 -13 -63 -45 -63 -91 l0 -36 -115 -10 c-96 -8 -120
 -13 -137 -30 -15 -16 -19 -28 -14 -48 9 -34 36 -43 99 -34 29 4 80 8 114 8
@@ -164,14 +178,17 @@ c4 -16 9 -58 13 -94 l7 -64 -55 -16 c-68 -19 -138 -69 -138 -97 0 -19 4 -20
 24 51 44 98 44 105 0 6 5 11 12 11 6 0 30 20 52 44 29 30 69 56 136 87 85 38
 105 44 193 49 103 6 117 13 117 57 0 40 -25 53 -104 53 -86 0 -166 -19 -248
 -60 -72 -36 -92 -38 -83 -9 12 38 -6 118 -38 167 -38 56 -88 83 -262 141 -239
-80 -466 117 -552 91z" />
+80 -466 117 -552 91z"
+    ></path>
     <path
       d="M2963 630 c-25 -10 -71 -95 -102 -186 -26 -79 -77 -287 -85 -346 -3
 -27 -8 -59 -12 -73 l-6 -26 78 3 79 3 12 75 c21 140 68 305 114 406 19 41 25
-100 11 120 -8 13 -47 34 -59 33 -4 0 -18 -4 -30 -9z" />
+100 11 120 -8 13 -47 34 -59 33 -4 0 -18 -4 -30 -9z"
+    ></path>
     <path
       d="M6177 219 c-26 -5 -73 -21 -105 -35 -49 -21 -66 -24 -118 -19 -76 9
 -104 -4 -104 -45 0 -42 24 -60 83 -62 92 -4 129 2 186 29 34 15 81 27 121 30
-75 6 110 24 110 57 0 52 -57 67 -173 45z" />
+75 6 110 24 110 57 0 52 -57 67 -173 45z"
+    ></path>
   </g>
 </svg>
