--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,8 +1,9 @@
+---
+import LogoIcon from '@icons/LogoIcon.astro';
+---
 <header class="w-full h-16 flex items-center justify-between px-6 bg-white dark:bg-zinc-950 shadow-md">
   <div>
-    <svg class="w-6 h-6 text-gray-800 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 16">
-      <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 4 1 8l4 4m10-8 4 4-4 4M11 1 9 15"/>
-    </svg>
+    <LogoIcon />
   </div>
   <nav class="space-x-4">
     <a class="text-sm" href="#">
