--- a/src/icons/LogoIcon.astro
+++ b/src/icons/LogoIcon.astro
@@ -2,8 +2,8 @@
 <svg
   version="1.0"
   xmlns="http://www.w3.org/2000/svg"
-  width="640.000000pt"
-  height="640.000000pt"
+  width="2rem"
+  height="2rem"
   viewBox="0 0 640.000000 640.000000"
   preserveAspectRatio="xMidYMid meet"
 >
