--- a/src/components/TimelineItem.astro
+++ b/src/components/TimelineItem.astro
@@ -10,7 +10,7 @@ interface Props {
 }
 const { date, title, description, company } = Astro.props;
 ---
-<li class="mb-10 ms-8">
+<li class="mb-10 ms-8 me-6 lg:me-0">
   <span class="absolute flex items-center justify-center p-0.5 w-6 h-6 bg-white rounded-full -start-3">
     { company === 'Oracle' && ( <OracleIcon /> ) }
     { company === 'GE Aerospace' && ( <GEIcon /> ) }
@@ -21,7 +21,7 @@ const { date, title, description, company } = Astro.props;
   <h3 class="text-lg font-semibold text-gray-900 dark:text-white">
     {title}
   </h3>
-  <p class="text-base font-normal text-gray-500 dark:text-gray-400">
+  <p class="md:text-base text-sm font-normal text-gray-500 dark:text-gray-400">
     {description}
   </p>
 </li>
