--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
 import MainSection from '@components/MainSection.astro';
 import ProfessionalExperience from '@components/ProfessionalExperience.astro';
+import ProjectsSection from '@components/ProjectsSection.astro';
 import Layout from '@layouts/Layout.astro';
 ---
 
@@ -8,7 +9,6 @@ import Layout from '@layouts/Layout.astro';
   <main>
 		<MainSection />
     <ProfessionalExperience />
+    <ProjectsSection />
   </main>
 </Layout>
-
-<style></style>
