--- a/src/components/Project.astro
+++ b/src/components/Project.astro
@@ -22,14 +22,14 @@ const { title, description, link, github, image, tags } = Astro.props;
     {title}
   </h3>
   <p
-    class="mt-2 md:text-base text-sm font-normal text-gray-500 dark:text-gray-400"
+    class="mt-2 text-base font-normal text-gray-500 dark:text-gray-400"
   >
     {description}
   </p>
-  <ul class="flex gap-x-2 flex-row my-4">
+  <ul class="flex flex-wrap gap-x-2 flex-row">
     {
       tags.map((tag) => (
-        <li>
+        <li class="mt-4">
           <span
             class={`flex gap-x-2 rounded-full text-sm ${tag.class} py-1 px-2 `}
           >
@@ -41,7 +41,7 @@ const { title, description, link, github, image, tags } = Astro.props;
     }
   </ul>
   <Image src={projectSample} alt="Oswaldo Osuna" class="mt-4" />
-  <footer class="flex gap-x-4 items-end justify-start mt-4">
+  <footer class="flex justify-center gap-x-4 items-center mt-4">
     {
       github && (
         <ProjectLinkButton href={github}>
