--- a/src/components/MainSection.astro
+++ b/src/components/MainSection.astro
@@ -6,14 +6,16 @@ import SocialMedia from '@components/SocialMedia.astro';
 ---
 
 <SectionContainer class="py-44 pb-32 w-10/12">
-  <div class="flex items-center justify-center mb-4 mx-6">
-    <h1 class="md:text-6xl text-4xl font-extrabold text-center">Oswaldo Osuna</h1>
-    <Image src={meImage} alt="Oswaldo Osuna" class="w-20 h-20 rounded-full mx-10" />
+  <div class="mx-6 lg:mx-0">
+    <div class="flex items-center justify-center mb-4">
+      <h1 class="md:text-6xl text-4xl font-extrabold text-center">Oswaldo Osuna</h1>
+      <Image src={meImage} alt="Oswaldo Osuna" class="w-20 h-20 rounded-full mx-10" />
+    </div>
+    <p class="md:text-xl text-base text-center text-zinc-500 dark:text-zinc-400">
+      Full stack developer from Queretaro, Mexico. 3 years of experience.
+      Specializing in front-end technologies to create efficient and
+      functional user interfaces.
+    </p>
+    <SocialMedia />
   </div>
-  <p class="md:text-xl text-base text-center text-gray-500 dark:text-gray-400">
-    Full stack developer from Queretaro, Mexico. 3 years of experience.
-    Specializing in front-end technologies to create efficient and
-    functional user interfaces.
-  </p>
-  <SocialMedia />
 </SectionContainer>
