--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -22,7 +22,7 @@ const menuOptions = [
   <nav class="space-x-4">
     {
       menuOptions.map((option) => (
-        <a class="text-sm" href="#">
+        <a class="text-sm text-zinc-500 dark:text-zinc-400" href="#">
           {option.name}
         </a>
       ))
