--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,28 +1,44 @@
 ---
-import LogoIcon from '@icons/LogoIcon.astro';
+import LogoIcon from "@icons/LogoIcon.astro";
 const menuOptions = [
   {
-    name: 'Experience'
+    name: "Experience",
+    label: "experience",
+    url: "/#experience",
   },
   {
-    name: 'Projects'
+    name: "Projects",
+    label: "projects",
+    url: "/#projects",
   },
   {
-    name: 'Achievements'
+    name: "Achievements",
+    label: "achievements",
+    url: "/#achievements",
   },
   {
-    name: 'About Me'
+    name: "About Me",
+    label: "about me",
+    url: "/#about-me",
   },
 ];
 ---
-<header class="w-full fixed h-14 flex items-center justify-between px-6 shadow-md backdrop-blur">
-  <div>
+
+<header
+  class="w-full fixed h-14 flex items-center justify-between px-6 shadow-md backdrop-blur"
+>
+  <a href="/#">
     <LogoIcon />
-  </div>
+  </a>
   <nav class="space-x-4">
     {
       menuOptions.map((option) => (
-        <a class="text-sm text-zinc-500 dark:text-zinc-400" href="#">
+        <a
+          class="text-sm text-zinc-500 dark:text-zinc-400
+            hover:text-zinc-600 dark:hover:text-zinc-300 transition-all"
+          aria-label={option.label}
+          href={option.url}
+        >
           {option.name}
         </a>
       ))
