--- a/src/components/ProjectsSection.astro
+++ b/src/components/ProjectsSection.astro
@@ -37,7 +37,7 @@ const projects = [
 ]
 ---
 
-<SectionContainer class="py-16">
+<SectionContainer id="projects" class="py-16">
   <h2 class="text-3xl font-bold text-center mb-10">Projects</h2>
   <div class="lg:mx-0 mx-6">
     {
