--- a/src/icons/LogoIcon.astro
+++ b/src/icons/LogoIcon.astro
@@ -1,5 +1,6 @@
 <!--?xml version="1.0" standalone="no"?--><!doctype html>
 <svg
+  {...Astro.props}
   version="1.0"
   xmlns="http://www.w3.org/2000/svg"
   width="2rem"
