--- a/src/components/ProjectLinkButton.astro
+++ b/src/components/ProjectLinkButton.astro
@@ -2,7 +2,9 @@
 const { href } = Astro.props;
 ---
 
-<button
+<a
+  href={href}
+  target=”_blank”
   class="text-gray-900 bg-white border border-gray-300
     focus:outline-none hover:bg-gray-100 focus:ring-4
     focus:ring-gray-200 font-medium rounded-lg
@@ -11,4 +13,4 @@ const { href } = Astro.props;
     dark:hover:bg-zinc-800 dark:focus:ring-gray-700"
 >
   <slot />
-</button>
+</a>
