--- a/src/components/ProjectsSection.astro
+++ b/src/components/ProjectsSection.astro
@@ -1,40 +1,110 @@
 ---
-import SectionContainer from '@components/SectionContainer.astro';
-import Project from '@components/Project.astro';
-import NextJSIcon from '@icons/NextJSIcon.astro';
-import TailwindIcon from '@icons/TailwindIcon.astro';
+import SectionContainer from "@components/SectionContainer.astro";
+import Project from "@components/Project.astro";
+import NextJSIcon from "@icons/NextJSIcon.astro";
+import TailwindIcon from "@icons/TailwindIcon.astro";
+import VueIcon from "@icons/VueIcon.astro";
+import BootstrapIcon from "@icons/BootstrapIcon.astro";
+import PythonIcon from "@icons/PythonIcon.astro";
+import MongoDbIcon from "@icons/MongoDbIcon.astro";
+import NodeJsIcon from "@icons/NodeJsIcon.astro";
+import AwsIcon from "@icons/AwsIcon.astro";
+import SpringIcon from "@icons/SpringIcon.astro";
+import MySqlIcon from "@icons/MySqlIcon.astro";
+import DockerIcon from "@icons/DockerIcon.astro";
 
 const tags = {
   next: {
-    name: 'Next.js',
-    class: 'bg-black text-white',
+    name: "Next.js",
+    class: "bg-black text-white",
     icon: NextJSIcon,
   },
   tailwind: {
-    name: 'Tailwind CSS',
-    class: 'bg-[#003159] text-white',
+    name: "Tailwind CSS",
+    class: "bg-[#003159] text-white",
     icon: TailwindIcon,
   },
-}
+  vue: {
+    name: "Vue.js",
+    class: "bg-[#35495e] text-white",
+    icon: VueIcon,
+  },
+  bootstrap: {
+    name: "Bootstrap",
+    class: "bg-[#7952b3] text-white",
+    icon: BootstrapIcon,
+  },
+  python: {
+    name: "Python",
+    class: "bg-[#306998] text-white",
+    icon: PythonIcon,
+  },
+  mongodb: {
+    name: "MongoDB",
+    class: "bg-white text-black",
+    icon: MongoDbIcon,
+  },
+  nodejs: {
+    name: "Node.js",
+    class: "bg-[#68a063] text-white",
+    icon: NodeJsIcon,
+  },
+  aws: {
+    name: "AWS",
+    class: "bg-white text-black",
+    icon: AwsIcon,
+  },
+  spring: {
+    name: "Spring",
+    class: "bg-white text-black",
+    icon: SpringIcon,
+  },
+  mysql: {
+    name: "My SQL",
+    class: "bg-[#00758f] text-white",
+    icon: MySqlIcon,
+  },
+  docker: {
+    name: "Docker",
+    class: "bg-[#0db7ed] text-white",
+    icon: DockerIcon,
+  },
+};
 const projects = [
   {
-    title: 'SVGL - A beautiful library with SVG logos',
+    title: "Spring Book API",
     description:
-      'Biblioteca de logos SVG de las marcas más populares. +10k visitas al mes. +2K svgs descargados. Creado desde cero con Next.js, React y Tailwind CSS.',
-    link: 'https://svgl.vercel.app/',
-    github: 'https://github.com/pheralb/svgl',
-    image: '/projects/svgl.webp',
-    tags: [tags.next, tags.tailwind],
+      "Rest API made with Spring Boot. It has CRUD operations for books. It uses Spring Data JPA and MySQL database. Spring Security implementation. SMTP and AWS S3 integration. Was deployed in AWS EC2 using Docker containers. It is consumed by a mobile application made with Ionic.",
+    github: "https://github.com/ososuna/spring-book-api",
+    image: "spring-book-api.png",
+    tags: [tags.spring, tags.mysql, tags.aws, tags.docker],
   },
   {
-    title: 'AdventJS - Retos de programación con JavaScript y TypeScript',
+    title: "Get Loans",
     description:
-      'Plataforma gratuita con retos de programación. Más de 1 millón de visitas en un mes. +50K retos completados. Creada desde cero con Next.js, React y Tailwind CSS',
-    link: 'https://adventjs.dev',
-    image: '/projects/adventjs.webp',
-    tags: [tags.next, tags.tailwind],
+      "Non-relational databases project. Consisted in creating a solution using an AWS Infraestructure and NoSQL Databases. Web application that allows users to request loans. Made with Vue.js and Node.js. The database used was MongoDB. The application was deployed on AWS S3 and Elastic Beanstalk.",
+    github: "https://github.com/ososuna/AdDataBasesProject",
+    image: "get-loans.png",
+    tags: [tags.vue, tags.nodejs, tags.aws, tags.mongodb, tags.bootstrap],
   },
-]
+  {
+    title: "Vue Pokedex",
+    description:
+      "Pokedex made with Vue 3 and Bootstrap consuming PokeAPI. It has a search engine, infinite scroll and a detail page for each Pokemon. Responsive design. It is deployed on Vercel.",
+    link: "https://pokedex-umber-pi.vercel.app/#/",
+    github: "https://github.com/ososuna/pokedex",
+    image: "vue-pokedex.png",
+    tags: [tags.vue, tags.bootstrap],
+  },
+  {
+    title: "League of Legends Matchmaking Algorithm",
+    description:
+      "Matchmaking algorithm for solo queue rankeds in League of Legends. Data Structures project. Made with Python.",
+    github: "https://github.com/ososuna/matchmaking-lol",
+    image: "matchmaking-lol.png",
+    tags: [tags.python],
+  },
+];
 ---
 
 <SectionContainer id="projects" class="py-16">
