--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,5 @@
 ---
+import AchievementsSection from '@components/AchievementsSection.astro';
 import MainSection from '@components/MainSection.astro';
 import ProfessionalExperience from '@components/ProfessionalExperience.astro';
 import ProjectsSection from '@components/ProjectsSection.astro';
@@ -10,5 +11,6 @@ import Layout from '@layouts/Layout.astro';
 		<MainSection />
     <ProfessionalExperience />
     <ProjectsSection />
+    <AchievementsSection />
   </main>
 </Layout>
