--- a/src/components/AchievementsSection.astro
+++ b/src/components/AchievementsSection.astro
@@ -1,6 +1,6 @@
 ---
+import AchievementCard from '@components/AchievementCard.astro';
 import SectionContainer from '@components/SectionContainer.astro';
-import AchievementCard from './AchievementCard.astro';
 
 const achievements = [
   {
@@ -15,7 +15,6 @@ const achievements = [
     image: 'anahuac-queretaro.jpg',
   },
 ];
-
 ---
 
 <SectionContainer id="achievements" class="py-16">
