--- a/src/components/MainSection.astro
+++ b/src/components/MainSection.astro
@@ -13,7 +13,7 @@ import SocialMedia from '@components/SocialMedia.astro';
     </div>
     <p class="md:text-xl text-base text-center text-zinc-500 dark:text-zinc-400">
       Full stack developer from Queretaro, Mexico. 3 years of experience.
-      Specializing in front-end technologies to create efficient and
+      Specializing in front end technologies to create efficient and
       functional user interfaces.
     </p>
     <SocialMedia />
