about me section

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,16 +1,18 @@
 ---
-import AchievementsSection from '@components/AchievementsSection.astro';
-import MainSection from '@components/MainSection.astro';
-import ProfessionalExperience from '@components/ProfessionalExperience.astro';
-import ProjectsSection from '@components/ProjectsSection.astro';
-import Layout from '@layouts/Layout.astro';
+import Layout from "@layouts/Layout.astro";
+import AchievementsSection from "@components/AchievementsSection.astro";
+import MainSection from "@components/MainSection.astro";
+import ProfessionalExperience from "@components/ProfessionalExperience.astro";
+import ProjectsSection from "@components/ProjectsSection.astro";
+import AboutMeSection from "@components/AboutMeSection.astro";
 ---
 
 <Layout title="Oswaldo Osuna">
   <main>
-		<MainSection />
+    <MainSection />
     <ProfessionalExperience />
     <ProjectsSection />
     <AchievementsSection />
+    <AboutMeSection />
   </main>
 </Layout>
