--- a/src/components/AboutMeSection.astro
+++ b/src/components/AboutMeSection.astro
@@ -1,7 +1,7 @@
 ---
 import { Image } from 'astro:assets';
 import SectionContainer from '@components/SectionContainer.astro';
-import meImage from '@img/img-01.jpeg';
+import meImage from '@img/oswaldo-osuna.jpeg';
 ---
 
 <SectionContainer id="about-me" class="py-16">
