--- a/src/components/Timeline.astro
+++ b/src/components/Timeline.astro
@@ -12,7 +12,7 @@ const experience = [
   {
     title: 'Software Development Intern at GE Aerospace',
     company: 'GE Aerospace',
-    date: 'July 2021',
+    date: 'July 2021 - March 2023',
     description:
       'Full stack developer with practical knowledge on coding, debugging and testing using technologies such as TypeScript, Vue.js, PostgreSQL, Docker, Jenkins, SonarQube, Java, JUnit and Spring Framework. Also working in an agile software development team implementing software best practices and methodologies like DevOps and CI/CD.',
   },
