--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,10 @@ import ProjectsSection from "@components/ProjectsSection.astro";
 import AboutMeSection from "@components/AboutMeSection.astro";
 ---
 
-<Layout title="Oswaldo Osuna">
+<Layout
+  title="Oswaldo Osuna - Full Stack Developer"
+  description="My name is Oswaldo Adrian Osuna Rizo. Full stack developer from Queretaro, Mexico. Front end and back end. Working with Java, JavaScript, React, Vue. Oracle Cloud Infrastructure. GE Aerospace. Universidad Anáhuac Queretaro."
+>
   <main>
     <MainSection />
     <ProfessionalExperience />
