--- a/src/components/AchievementsSection.astro
+++ b/src/components/AchievementsSection.astro
@@ -6,13 +6,13 @@ const achievements = [
   {
     title: 'Huawei Seeds for the Future 2020',
     description: 'Selected as one of the top 40 students in Mexico to participate in a minimum learning of 13 hours, covering exclusive courses to learn about Huawei and the lastest technologies (5G, AI, cloud computing and HMS), to discover the technology ecosystem in China and to learn from the best experts in the industry.',
-    image: 'seeds-for-the-future.jpg',
+    image: '/src/assets/img/achievements/seeds-for-the-future.jpg',
     link: 'https://www.huawei.com/minisite/seeds-for-the-future/index.html'
   },
   {
     title: 'Software Engineering Bachelor\'s Degree',
     description: 'Bachelor\'s Degree in Software Engineering from Universidad Anahuac Queretaro. My academic journey has equipped me with a solid foundation in software engineering principles, programming languages, and emerging technologies. Engaging in collaborative projects has honed my expertise in web development, database design, and software architecture.',
-    image: 'anahuac-queretaro.jpg',
+    image: '/src/assets/img/achievements/anahuac-queretaro.jpg',
   },
 ];
 ---
