--- a/src/components/ProjectsSection.astro
+++ b/src/components/ProjectsSection.astro
@@ -76,7 +76,7 @@ const projects = [
     description:
       "Rest API made with Spring Boot. It has CRUD operations for books. It uses Spring Data JPA and MySQL database. Spring Security implementation. SMTP and AWS S3 integration. Was deployed in AWS EC2 using Docker containers. It is consumed by a mobile application made with Ionic.",
     github: "https://github.com/ososuna/spring-book-api",
-    image: "spring-book-api.png",
+    image: "/src/assets/img/projects/spring-book-api.png",
     tags: [tags.spring, tags.mysql, tags.aws, tags.docker],
   },
   {
@@ -84,7 +84,7 @@ const projects = [
     description:
       "Non-relational databases project. Consisted in creating a solution using an AWS Infraestructure and NoSQL Databases. Web application that allows users to request loans. Made with Vue.js and Node.js. The database used was MongoDB. The application was deployed on AWS S3 and Elastic Beanstalk.",
     github: "https://github.com/ososuna/AdDataBasesProject",
-    image: "get-loans.png",
+    image: "/src/assets/img/projects/get-loans.png",
     tags: [tags.vue, tags.nodejs, tags.aws, tags.mongodb, tags.bootstrap],
   },
   {
@@ -93,7 +93,7 @@ const projects = [
       "Pokedex made with Vue 3 and Bootstrap consuming PokeAPI. It has a search engine, infinite scroll and a detail page for each Pokemon. Responsive design. It is deployed on Vercel.",
     link: "https://pokedex-umber-pi.vercel.app/#/",
     github: "https://github.com/ososuna/pokedex",
-    image: "vue-pokedex.png",
+    image: "/src/assets/img/projects/vue-pokedex.png",
     tags: [tags.vue, tags.bootstrap],
   },
   {
@@ -101,7 +101,7 @@ const projects = [
     description:
       "Matchmaking algorithm for solo queue rankeds in League of Legends. Data Structures project. Made with Python.",
     github: "https://github.com/ososuna/matchmaking-lol",
-    image: "matchmaking-lol.png",
+    image: "/src/assets/img/projects/matchmaking-lol.png",
     tags: [tags.python],
   },
 ];
