dark mode feature

--- a/src/components/AchievementsSection.astro
+++ b/src/components/AchievementsSection.astro
@@ -18,7 +18,7 @@ const achievements = [
 ---
 
 <SectionContainer id="achievements" class="py-16">
-  <h2 class="text-3xl font-bold text-center mb-10">Achievements</h2>
+  <h2 class="text-zinc-950 dark:text-white text-3xl font-bold text-center mb-10">Achievements</h2>
   <div class="flex md:flex-row flex-col justify-center md:items-start items-center lg:space-x-8 md:space-x-4">
     {
       achievements.map(({title, description, image, link}) => (
