--- a/src/components/AboutMeSection.astro
+++ b/src/components/AboutMeSection.astro
@@ -5,7 +5,7 @@ import meImage from '@img/oswaldo-osuna.jpeg';
 ---
 
 <SectionContainer id="about-me" class="py-16">
-  <h2 class="text-3xl font-bold text-center mb-10">About Me</h2>
+  <h2 class="text-zinc-950 dark:text-white text-3xl font-bold text-center mb-10">About Me</h2>
   <div
     class="flex flex-col md:flex-row items-center justify-center lg:mx-0 mx-6"
   >
@@ -20,10 +20,10 @@ import meImage from '@img/oswaldo-osuna.jpeg';
       <p
         class="text-lg font-normal text-gray-500 dark:text-gray-400 text-center md:text-left mb-2"
       >
-        My name is <span class="font-bold text-white">Oswaldo Osuna</span> and I
-        am a <span class="font-bold text-white">Full Stack Developer</span>. I
+        My name is <span class="text-zinc-950 dark:text-white font-bold">Oswaldo Osuna</span> and I
+        am a <span class="text-zinc-950 dark:text-white font-bold">Full Stack Developer</span>. I
         have been working in the tech industry for over <span
-          class="font-bold text-white">3 years</span
+          class="text-zinc-950 dark:text-white font-bold">3 years</span
         >. I am passionate about building effective software and learning every
         day to grow professionally in a dynamic environment.
       </p>
@@ -31,12 +31,12 @@ import meImage from '@img/oswaldo-osuna.jpeg';
         class="text-lg font-normal text-gray-500 dark:text-gray-400 text-center md:text-left mb-2"
       >
         Some of my achievements include contributing to the development of the
-        UI for <span class="font-bold text-white"
+        UI for <span class="text-zinc-950 dark:text-white font-bold"
           >Oracle Cloud Infrastructure in the Logging Analytics service</span
         >. I have also worked on developing solutions for the <span
-          class="font-bold text-white">aerospace industry</span
+          class="text-zinc-950 dark:text-white font-bold">aerospace industry</span
         >
-        in creating web applications for <span class="font-bold text-white"
+        in creating web applications for <span class="text-zinc-950 dark:text-white font-bold"
           >managing critical business processes</span
         >.
       </p>
@@ -44,7 +44,7 @@ import meImage from '@img/oswaldo-osuna.jpeg';
         class="text-lg font-normal text-gray-500 dark:text-gray-400 text-center md:text-left"
       >
         As a university student, I was one of the 40 Mexican students selected
-        to participate in the <span class="font-bold text-white"
+        to participate in the <span class="text-zinc-950 dark:text-white font-bold"
           >Huawei Seeds for the Future 2020 program</span
         >.
       </p>
