--- a/src/components/MainSection.astro
+++ b/src/components/MainSection.astro
@@ -8,7 +8,7 @@ import SocialMedia from '@components/SocialMedia.astro';
 <SectionContainer class="py-44 pb-32 w-10/12">
   <div class="mx-6 lg:mx-0">
     <div class="flex items-center justify-center mb-4">
-      <h1 class="md:text-6xl text-4xl font-extrabold text-center">Oswaldo Osuna</h1>
+      <h1 class="text-zinc-950 dark:text-white md:text-6xl text-4xl font-extrabold text-center">Oswaldo Osuna</h1>
       <Image src={meImage} alt="Oswaldo Osuna" class="w-20 h-20 rounded-full mx-10" />
     </div>
     <p class="md:text-xl text-base text-center text-zinc-500 dark:text-zinc-400">
