--- a/src/components/ProjectsSection.astro
+++ b/src/components/ProjectsSection.astro
@@ -108,7 +108,7 @@ const projects = [
 ---
 
 <SectionContainer id="projects" class="py-16">
-  <h2 class="text-3xl font-bold text-center mb-10">Projects</h2>
+  <h2 class="text-zinc-950 dark:text-white text-3xl font-bold text-center mb-10">Projects</h2>
   <div class="lg:mx-0 mx-6">
     {
       projects.map((project) => (
