--- a/src/components/TimelineItem.astro
+++ b/src/components/TimelineItem.astro
@@ -11,11 +11,11 @@ interface Props {
 const { date, title, description, company } = Astro.props;
 ---
 <li class="mb-10 ms-8 me-6 lg:me-0">
-  <span class="absolute flex items-center justify-center p-0.5 w-6 h-6 bg-white rounded-full -start-3">
+  <span class="absolute flex items-center justify-center p-0.5 w-6 h-6 dark:bg-white bg-zinc-50 rounded-full -start-3">
     { company === 'Oracle' && ( <OracleIcon /> ) }
     { company === 'GE Aerospace' && ( <GEIcon /> ) }
   </span>
-  <time class="mb-1 text-sm font-normal leading-none text-gray-400 dark:text-gray-500">
+  <time class="mb-1 text-sm font-normal leading-none text-zinc-500 dark:text-gray-500">
     {date}
   </time>
   <h3 class="text-lg font-semibold text-gray-900 dark:text-white">
