--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -19,7 +19,7 @@ const { title, description } = Astro.props;
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
 	</head>
-	<body class="bg-zinc-950">
+	<body class="bg-white dark:bg-zinc-950">
 		<Navbar />
 		<slot />
 	</body>
