responsive design changes

--- a/src/components/AboutMeSection.astro
+++ b/src/components/AboutMeSection.astro
@@ -5,7 +5,7 @@ import meImage from '@img/oswaldo-osuna.jpeg';
 ---
 
 <SectionContainer id="about-me" class="py-16">
-  <h2 class="text-zinc-950 dark:text-white text-3xl font-bold text-center mb-10">About Me</h2>
+  <h2 class="text-zinc-950 dark:text-white xss:text-3xl text-2xl font-bold text-center mb-10">About Me</h2>
   <div
     class="flex flex-col md:flex-row items-center justify-center lg:mx-0 mx-6"
   >
@@ -18,7 +18,7 @@ import meImage from '@img/oswaldo-osuna.jpeg';
     </div>
     <div class="w-full md:w-8/12">
       <p
-        class="text-lg font-normal text-gray-500 dark:text-gray-400 text-center md:text-left mb-2"
+        class="text-base xss:text-lg font-normal text-gray-500 dark:text-gray-400 text-center md:text-left mb-2"
       >
         My name is <span class="text-zinc-950 dark:text-white font-bold">Oswaldo Osuna</span> and I
         am a <span class="text-zinc-950 dark:text-white font-bold">Full Stack Developer</span>. I
@@ -28,7 +28,7 @@ import meImage from '@img/oswaldo-osuna.jpeg';
         day to grow professionally in a dynamic environment.
       </p>
       <p
-        class="text-lg font-normal text-gray-500 dark:text-gray-400 text-center md:text-left mb-2"
+        class="text-base xss:text-lg font-normal text-gray-500 dark:text-gray-400 text-center md:text-left mb-2"
       >
         Some of my achievements include contributing to the development of the
         UI for <span class="text-zinc-950 dark:text-white font-bold"
@@ -41,7 +41,7 @@ import meImage from '@img/oswaldo-osuna.jpeg';
         >.
       </p>
       <p
-        class="text-lg font-normal text-gray-500 dark:text-gray-400 text-center md:text-left"
+        class="text-base xss:text-lg font-normal text-gray-500 dark:text-gray-400 text-center md:text-left"
       >
         As a university student, I was one of the 40 Mexican students selected
         to participate in the <span class="text-zinc-950 dark:text-white font-bold"
