--- a/src/components/ProfessionalExperience.astro
+++ b/src/components/ProfessionalExperience.astro
@@ -4,6 +4,6 @@ import Timeline from '@components/Timeline.astro';
 ---
 
 <SectionContainer id="experience" class="py-16">
-  <h2 class="text-zinc-950 dark:text-white text-3xl font-bold text-center mb-10">Professional Experience</h2>
+  <h2 class="text-zinc-950 dark:text-white xss:text-3xl text-2xl font-bold text-center mb-10">Professional Experience</h2>
   <Timeline />
 </SectionContainer>
