--- a/src/components/AchievementCard.astro
+++ b/src/components/AchievementCard.astro
@@ -29,7 +29,7 @@ if (!images[image]) throw new Error(`"${image}" does not exist in glob: "/src/as
         {title}
       </h3>
     </a>
-    <p class="mt-2 text-base font-normal text-gray-500 dark:text-gray-400">
+    <p class="mt-2 text-sm xss:text-base font-normal text-gray-500 dark:text-gray-400">
       {description}
     </p>
     {
