--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -26,17 +26,17 @@ const menuOptions = [
 ---
 
 <header
-  class="w-full fixed h-14 flex items-center justify-between px-6 shadow-md backdrop-blur z-50"
+  class="w-full fixed h-14 flex items-center xs:justify-between justify-center xs:px-6 shadow-md backdrop-blur z-50"
 >
-  <a href="/#">
+  <a href="/#" class="xss:hidden xs:block block">
     <LogoIcon />
   </a>
-  <nav class="flex items-center space-x-4">
+  <nav class="flex items-center xs:space-x-4 space-x-3">
     {
       menuOptions.map((option) => (
         <a
           class="text-sm text-zinc-500 dark:text-zinc-400
-            hover:text-zinc-600 dark:hover:text-zinc-300 transition-all"
+            hover:text-zinc-600 dark:hover:text-zinc-300 transition-all xss:block hidden"
           aria-label={option.label}
           href={option.url}
         >
