--- a/src/components/Project.astro
+++ b/src/components/Project.astro
@@ -23,7 +23,7 @@ if (!images[image]) throw new Error(`"${image}" does not exist in glob: "/src/as
     {title}
   </h3>
   <p
-    class="mt-2 text-base font-normal text-gray-500 dark:text-gray-400"
+    class="mt-2 text-sm xss:text-base font-normal text-gray-500 dark:text-gray-400"
   >
     {description}
   </p>
