--- a/src/components/TimelineItem.astro
+++ b/src/components/TimelineItem.astro
@@ -21,7 +21,7 @@ const { date, title, description, company } = Astro.props;
   <h3 class="text-lg font-semibold text-gray-900 dark:text-white">
     {title}
   </h3>
-  <p class="md:text-base text-sm font-normal text-gray-500 dark:text-gray-400">
+  <p class="text-sm xss:text-base font-normal text-gray-500 dark:text-gray-400">
     {description}
   </p>
 </li>
