--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -26,7 +26,7 @@ const menuOptions = [
 ---
 
 <header
-  class="w-full fixed h-14 flex items-center xs:justify-between justify-center xs:px-6 shadow-md backdrop-blur z-50"
+  class="w-full fixed h-14 flex items-center xs:justify-between justify-center xs:px-6 shadow-sm backdrop-blur z-50"
 >
   <a href="/#" class="xss:hidden xs:block block">
     <LogoIcon />
