border tech tags

--- a/src/components/ProjectsSection.astro
+++ b/src/components/ProjectsSection.astro
@@ -41,7 +41,7 @@ const tags = {
   },
   mongodb: {
     name: "MongoDB",
-    class: "bg-white text-black",
+    class: "bg-white text-black border-solid border border-zinc-950 dark:border-none",
     icon: MongoDbIcon,
   },
   nodejs: {
@@ -51,12 +51,12 @@ const tags = {
   },
   aws: {
     name: "AWS",
-    class: "bg-white text-black",
+    class: "bg-white text-black border-solid border border-zinc-950 dark:border-none",
     icon: AwsIcon,
   },
   spring: {
     name: "Spring",
-    class: "bg-white text-black",
+    class: "bg-white text-black border-solid border border-zinc-950 dark:border-none",
     icon: SpringIcon,
   },
   mysql: {
