--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,5 @@
 ---
+import SpeedInsights from '@vercel/speed-insights/astro';
 import Navbar from '@components/Navbar.astro';
 
 interface Props {
@@ -18,6 +19,7 @@ const { title, description } = Astro.props;
 		<link rel="icon" type="image/svg" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
+		<SpeedInsights />
 	</head>
 	<body class="bg-white dark:bg-zinc-950">
 		<Navbar />
