--- a/src/components/MainSection.astro
+++ b/src/components/MainSection.astro
@@ -1,6 +1,6 @@
 ---
 import { Image } from 'astro:assets';
-import meImage from '@img/oswaldo-osuna.jpeg';
+import meImage from '@img/oswaldo-osuna.jpg';
 import SectionContainer from '@components/SectionContainer.astro';
 import SocialMedia from '@components/SocialMedia.astro';
 ---
