--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -28,7 +28,7 @@ const menuOptions = [
 <header
   class="w-full fixed h-14 flex items-center xs:justify-between justify-center xs:px-6 shadow-sm backdrop-blur z-50"
 >
-  <a href="/#" class="xss:hidden xs:block block">
+  <a href="/#" aria-label="Home" class="xss:hidden xs:block block">
     <LogoIcon />
   </a>
   <nav class="flex items-center xs:space-x-4 space-x-3">
