--- a/src/components/AboutMeSection.astro
+++ b/src/components/AboutMeSection.astro
@@ -23,7 +23,7 @@ import meImage from '@img/oswaldo-osuna.jpeg';
         My name is <span class="text-zinc-950 dark:text-white font-bold">Oswaldo Osuna</span> and I
         am a <span class="text-zinc-950 dark:text-white font-bold">Full Stack Developer</span>. I
         have been working in the tech industry for over <span
-          class="text-zinc-950 dark:text-white font-bold">3 years</span
+          class="text-zinc-950 dark:text-white font-bold">4 years</span
         >. I am passionate about building effective software and learning every
         day to grow professionally in a dynamic environment.
       </p>
@@ -32,7 +32,7 @@ import meImage from '@img/oswaldo-osuna.jpeg';
       >
         Some of my achievements include contributing to the development of the
         UI for <span class="text-zinc-950 dark:text-white font-bold"
-          >Oracle Cloud Infrastructure in the Logging Analytics service</span
+          >Oracle Cloud Infrastructure in the Log Analytics service</span
         >. I have also worked on developing solutions for the <span
           class="text-zinc-950 dark:text-white font-bold">aerospace industry</span
         >
