--- a/src/components/Timeline.astro
+++ b/src/components/Timeline.astro
@@ -7,7 +7,7 @@ const experience = [
     company: 'Oracle',
     date: 'March 2023 - Present',
     description:
-      'Front end Developer in Logging Analytics service at Oracle Cloud Infrastructure, utilizing Oracle JET, JavaScript, and TypeScript. Responsible for developing and maintaining front end components, ensuring seamless integration with back-end services. Proficient in creating intuitive user interfaces, conducting thorough testing, and incorporating user feedback. Achievements include contributions to the development of new features for enhanced logs analysis capabilities.',
+      'Front end Developer in Log Analytics service at Oracle Cloud Infrastructure, utilizing Oracle JET, JavaScript, and TypeScript. Responsible for developing and maintaining front end components, ensuring seamless integration with back-end services. Proficient in creating intuitive user interfaces, conducting thorough testing, and incorporating user feedback. Achievements include contributions to the development of new features for enhanced logs analysis capabilities.',
   },
   {
     title: 'Software Development Intern at GE Aerospace',
