--- a/src/components/Timeline.astro
+++ b/src/components/Timeline.astro
@@ -1,22 +1,6 @@
 ---
 import TimelineItem from '@components/TimelineItem.astro';
-
-const experience = [
-  {
-    title: 'Software Engineer at Oracle',
-    company: 'Oracle',
-    date: 'March 2023 - August 2025',
-    description:
-      'Front end Developer in Log Analytics service at Oracle Cloud Infrastructure, utilizing Oracle JET, JavaScript, and TypeScript. Responsible for developing and maintaining front end components, ensuring seamless integration with back-end services. Proficient in creating intuitive user interfaces, conducting thorough testing, and incorporating user feedback. Achievements include contributions to the development of new features for enhanced logs analysis capabilities.',
-  },
-  {
-    title: 'Software Development Intern at GE Aerospace',
-    company: 'GE Aerospace',
-    date: 'July 2021 - March 2023',
-    description:
-      'Full stack developer with practical knowledge on coding, debugging and testing using technologies such as TypeScript, Vue.js, PostgreSQL, Docker, Jenkins, SonarQube, Java, JUnit and Spring Framework. Also working in an agile software development team implementing software best practices and methodologies like DevOps and CI/CD.',
-  },
-];
+import experience from "@data/experience/experience.json";
 ---
 <div class="mx-auto lg:ms-0 ms-6">
   <ol class="relative border-s border-gray-200 dark:border-gray-700">
