Update personal information in About Me section

--- a/src/components/MainSection.astro
+++ b/src/components/MainSection.astro
@@ -12,7 +12,7 @@ import SocialMedia from '@components/SocialMedia.astro';
       <Image src={meImage} alt="Oswaldo Osuna" class="xss:size-20 size-16 rounded-full xss:mx-10 mx-6" />
     </div>
     <p class="md:text-xl xs:text-lg text-base text-center text-zinc-500 dark:text-zinc-400">
-      Full stack developer from Zapopan, Mexico. 4 years of experience.
+      Full Stack developer from Guadalajara, Mexico. 5 years of experience.
       Specializing in front end technologies to create efficient and
       functional user interfaces.
     </p>
