--- a/src/components/AboutMeSection.astro
+++ b/src/components/AboutMeSection.astro
@@ -30,8 +30,7 @@ import meImage from '@img/oswaldo-osuna.jpeg';
       <p
         class="text-base xss:text-lg font-normal text-gray-500 dark:text-gray-400 text-center md:text-left mb-2"
       >
-        Some of my achievements include contributing to the development of the
-        UI for <span class="text-zinc-950 dark:text-white font-bold"
+        I led development for <span class="text-zinc-950 dark:text-white font-bold"
           >Oracle Cloud Infrastructure in the Log Analytics service</span
         >. I have also worked on developing solutions for the <span
           class="text-zinc-950 dark:text-white font-bold">aerospace industry</span
@@ -43,7 +42,7 @@ import meImage from '@img/oswaldo-osuna.jpeg';
       <p
         class="text-base xss:text-lg font-normal text-gray-500 dark:text-gray-400 text-center md:text-left"
       >
-        As a university student, I was one of the 40 Mexican students selected
+        As a university student, I was one of the 40 students selected
         to participate in the <span class="text-zinc-950 dark:text-white font-bold"
           >Huawei Seeds for the Future 2020 program</span
         >.
