--- a/src/components/Timeline.astro
+++ b/src/components/Timeline.astro
@@ -10,7 +10,7 @@ import experience from "@data/experience/experience.json";
           title={item.title}
           company={item.company}
           date={item.date}
-          description={item.description}
+          bulletPoints={item.bulletPoints}
         />
       ))
     }
