--- a/src/components/MainSection.astro
+++ b/src/components/MainSection.astro
@@ -13,8 +13,7 @@ import SocialMedia from '@components/SocialMedia.astro';
     </div>
     <p class="md:text-xl xs:text-lg text-base text-center text-zinc-500 dark:text-zinc-400">
       Full Stack developer from Guadalajara, Mexico. 5 years of experience.
-      Specializing in front end technologies to create efficient and
-      functional user interfaces.
+      Specialized in building scalable systems and high-performance applications.
     </p>
     <SocialMedia />
   </div>
