--- a/src/components/TimelineItem.astro
+++ b/src/components/TimelineItem.astro
@@ -5,10 +5,10 @@ import GEIcon from '@icons/GEIcon.astro';
 interface Props {
   date: string;
   title: string;
-  description: string;
+  bulletPoints: string[];
   company: string;
 }
-const { date, title, description, company } = Astro.props;
+const { date, title, bulletPoints, company } = Astro.props;
 ---
 <li class="mb-10 ms-8 me-6 lg:me-0">
   <span class="absolute flex items-center justify-center p-0.5 w-6 h-6 dark:bg-white bg-zinc-50 rounded-full -start-3">
@@ -21,7 +21,9 @@ const { date, title, description, company } = Astro.props;
   <h3 class="text-lg font-semibold text-gray-900 dark:text-white">
     {title}
   </h3>
-  <p class="text-sm xss:text-base font-normal text-gray-500 dark:text-gray-400">
-    {description}
-  </p>
+  <ul class="text-sm xss:text-base font-normal text-gray-500 dark:text-gray-400 list-disc list-inside space-y-1">
+    {bulletPoints.map((point) => (
+      <li>{point}</li>
+    ))}
+  </ul>
 </li>
